--- a/LurkBoisModded/LurkBoisModded.csproj
+++ b/LurkBoisModded/LurkBoisModded.csproj
@@ -145,10 +145,11 @@
     <Compile Include="Abilities\InspireAbility.cs" />
     <Compile Include="Abilities\ProximityChatAbility.cs" />
     <Compile Include="Abilities\RemoteExplosiveAbility.cs" />
-    <Compile Include="SubclassManager.cs" />
-    <Compile Include="CustomCooldownAbilityBase.cs" />
-    <Compile Include="SubclassBase.cs" />
-    <Compile Include="CustomAbilityBase.cs" />
+    <Compile Include="Commands\RemoteAdmin\SetSubclass.cs" />
+    <Compile Include="Managers\SubclassManager.cs" />
+    <Compile Include="Base\CustomCooldownAbilityBase.cs" />
+    <Compile Include="Base\SubclassBase.cs" />
+    <Compile Include="Base\CustomAbilityBase.cs" />
     <Compile Include="Commands\GameConsole\CommandGas.cs" />
     <Compile Include="Commands\GameConsole\CommandSpawnDoor.cs" />
     <Compile Include="Commands\GameConsole\CommandSuicide.cs" />
@@ -169,7 +170,7 @@
     <Compile Include="EventHandlers\Scp939\Scp939ClawHandler.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Config.cs" />
-    <Compile Include="LootGenerator.cs" />
+    <Compile Include="Managers\LootManager.cs" />
     <Compile Include="Patches\Scp049\Scp049ChaseSpeedPatch.cs" />
     <Compile Include="Patches\Scp096\Scp096DashPatch.cs" />
     <Compile Include="Patches\VoiceChatPatch.cs" />
@@ -177,7 +178,7 @@
     <Compile Include="Patches\EffectPatch.cs" />
     <Compile Include="Patches\Scp079\Scp079LockdownPatch.cs" />
     <Compile Include="Patches\Scp330\PinkCandyPatch.cs" />
-    <Compile Include="AbilityManager.cs" />
+    <Compile Include="Managers\AbilityManager.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scripts\RagdollDropperScript.cs" />
