More subclasses and working max health modification

--- a/LurkBoisModded/LurkBoisModded.csproj
+++ b/LurkBoisModded/LurkBoisModded.csproj
@@ -142,10 +142,25 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abilities\WarCryAbility.cs" />
     <Compile Include="Abilities\InspireAbility.cs" />
     <Compile Include="Abilities\ProximityChatAbility.cs" />
     <Compile Include="Abilities\RemoteExplosiveAbility.cs" />
+    <Compile Include="Base\StatReplacementBase.cs" />
+    <Compile Include="Base\FakeConnection.cs" />
+    <Compile Include="Base\IRequiredItemAbility.cs" />
+    <Compile Include="Commands\RemoteAdmin\DeleteDummy.cs" />
+    <Compile Include="Commands\RemoteAdmin\SpawnDummy.cs" />
     <Compile Include="Commands\RemoteAdmin\SetSubclass.cs" />
+    <Compile Include="Base\EffectDefinition.cs" />
+    <Compile Include="Commands\RemoteAdmin\SubclassList.cs" />
+    <Compile Include="Effects\MaxHealthReduction.cs" />
+    <Compile Include="Patches\StatModulePatch.cs" />
+    <Compile Include="StatModules\IUpdatingStat.cs" />
+    <Compile Include="StatModules\NewAhpStat.cs" />
+    <Compile Include="StatModules\NewHealthStat.cs" />
+    <Compile Include="StatModules\NewHumeShieldStat.cs" />
+    <Compile Include="Managers\DummyManager.cs" />
     <Compile Include="Managers\SubclassManager.cs" />
     <Compile Include="Base\CustomCooldownAbilityBase.cs" />
     <Compile Include="Base\SubclassBase.cs" />
@@ -182,6 +197,9 @@
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scripts\RagdollDropperScript.cs" />
+    <Compile Include="Subclasses\CiDemoman.cs" />
+    <Compile Include="Subclasses\CiLeader.cs" />
+    <Compile Include="Subclasses\ClassDJanitor.cs" />
     <Compile Include="Subclasses\MtfCommander.cs" />
     <Compile Include="Utility.cs" />
   </ItemGroup>
