More subclasses, sometimes breaks, bugfix when I can

--- a/LurkBoisModded/LurkBoisModded.csproj
+++ b/LurkBoisModded/LurkBoisModded.csproj
@@ -81,8 +81,8 @@
     <Reference Include="MonoMod.ILHelpers, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\MonoMod.ILHelpers.1.0.0\lib\net452\MonoMod.ILHelpers.dll</HintPath>
     </Reference>
-    <Reference Include="MonoMod.Utils, Version=25.0.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\MonoMod.Utils.25.0.1\lib\net452\MonoMod.Utils.dll</HintPath>
+    <Reference Include="MonoMod.Utils, Version=25.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\MonoMod.Utils.25.0.0\lib\net452\MonoMod.Utils.dll</HintPath>
     </Reference>
     <Reference Include="NorthwoodLib">
       <HintPath>..\depend\NorthwoodLib.dll</HintPath>
@@ -90,8 +90,8 @@
     <Reference Include="NwPluginAPI.Analyzers, Version=12.0.0.0, Culture=neutral, processorArchitecture=AMD64">
       <HintPath>packages\Northwood.PluginAPI.Analyzers.12.0.0\lib\netstandard2.0\NwPluginAPI.Analyzers.dll</HintPath>
     </Reference>
-    <Reference Include="PluginAPI, Version=13.1.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>packages\Northwood.PluginAPI.13.1.0\lib\net48\PluginAPI.dll</HintPath>
+    <Reference Include="PluginAPI, Version=13.1.1.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>packages\Northwood.PluginAPI.13.1.1\lib\net48\PluginAPI.dll</HintPath>
     </Reference>
     <Reference Include="Pooling, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -158,6 +158,7 @@
     <Compile Include="Commands\RemoteAdmin\SubclassList.cs" />
     <Compile Include="Effects\MaxHealthReduction.cs" />
     <Compile Include="EventHandlers\SubclassSpawnHandler.cs" />
+    <Compile Include="Patches\DisarmPatch.cs" />
     <Compile Include="Patches\StatModulePatch.cs" />
     <Compile Include="StatModules\IUpdatingStat.cs" />
     <Compile Include="StatModules\NewAhpStat.cs" />
@@ -201,6 +202,9 @@
     <Compile Include="Scripts\RagdollDropperScript.cs" />
     <Compile Include="Subclasses\CiDemoman.cs" />
     <Compile Include="Subclasses\CiLeader.cs" />
+    <Compile Include="Subclasses\ArmedScientist.cs" />
+    <Compile Include="Subclasses\GuardZoneManager.cs" />
+    <Compile Include="Subclasses\GuardGymBro.cs" />
     <Compile Include="Subclasses\ClassDTestSubject.cs" />
     <Compile Include="Subclasses\ClassDSmuggler.cs" />
     <Compile Include="Subclasses\MtfScout.cs" />
@@ -216,6 +220,5 @@
     <Analyzer Include="packages\Microsoft.CodeAnalysis.Analyzers.3.3.4\analyzers\dotnet\cs\Microsoft.CodeAnalysis.Analyzers.dll" />
     <Analyzer Include="packages\Microsoft.CodeAnalysis.Analyzers.3.3.4\analyzers\dotnet\cs\Microsoft.CodeAnalysis.CSharp.Analyzers.dll" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
