Semi working Sniper e-11 (parts of it)

--- a/LurkBoisModded/LurkBoisModded.csproj
+++ b/LurkBoisModded/LurkBoisModded.csproj
@@ -153,6 +153,7 @@
     <Compile Include="Abilities\ProximityChatAbility.cs" />
     <Compile Include="Abilities\RemoteExplosiveAbility.cs" />
     <Compile Include="Base\CustomItem.cs" />
+    <Compile Include="Base\ICustomFirearmItem.cs" />
     <Compile Include="Base\StatReplacementBase.cs" />
     <Compile Include="Base\FakeConnection.cs" />
     <Compile Include="Base\IRequiredItemAbility.cs" />
@@ -167,6 +168,9 @@
     <Compile Include="Effects\MaxHealthReduction.cs" />
     <Compile Include="EventHandlers\CustomItemHandler.cs" />
     <Compile Include="EventHandlers\SubclassSpawnHandler.cs" />
+    <Compile Include="Patches\Firearm\Reload\AutoFirearmReloadFinishPath.cs" />
+    <Compile Include="Patches\Firearm\Reload\TubeMagReloadFinishPatch.cs" />
+    <Compile Include="Patches\Firearm\Reload\SemiAutoFirearmFinishPatch.cs" />
     <Compile Include="Patches\OnItemRemovedViaCommand.cs" />
     <Compile Include="Patches\ItemDestroyPatch.cs" />
     <Compile Include="Patches\DisarmPatch.cs" />
