Commands plus some grenade changes

--- a/LurkBoisModded/LurkBoisModded.csproj
+++ b/LurkBoisModded/LurkBoisModded.csproj
@@ -154,19 +154,27 @@
     <Compile Include="Abilities\RemoteExplosiveAbility.cs" />
     <Compile Include="Base\CustomItem.cs" />
     <Compile Include="Base\ICustomFirearmItem.cs" />
+    <Compile Include="Base\ICustomGrenadeItem.cs" />
     <Compile Include="Base\StatReplacementBase.cs" />
     <Compile Include="Base\FakeConnection.cs" />
     <Compile Include="Base\IRequiredItemAbility.cs" />
     <Compile Include="Commands\RemoteAdmin\DeleteDummy.cs" />
+    <Compile Include="Commands\RemoteAdmin\GiveCustomItem.cs" />
+    <Compile Include="Commands\RemoteAdmin\ListCustomItems.cs" />
+    <Compile Include="Commands\RemoteAdmin\ListDummies.cs" />
     <Compile Include="Commands\RemoteAdmin\SpawnDummy.cs" />
     <Compile Include="Commands\RemoteAdmin\SetSubclass.cs" />
     <Compile Include="Base\EffectDefinition.cs" />
     <Compile Include="Commands\RemoteAdmin\SubclassList.cs" />
     <Compile Include="CustomItems\Landmine.cs" />
+    <Compile Include="CustomItems\MolotovCocktail.cs" />
     <Compile Include="CustomItems\SniperE11.cs" />
-    <Compile Include="CustomItems\CustomTestItem.cs" />
     <Compile Include="Effects\Regeneration.cs" />
     <Compile Include="Effects\MaxHealthReduction.cs" />
+    <Compile Include="EnvriomentalHazards\BasicHazard.cs" />
+    <Compile Include="EnvriomentalHazards\BasicTimedHazard.cs" />
+    <Compile Include="EnvriomentalHazards\HazardManager.cs" />
+    <Compile Include="EnvriomentalHazards\Hazards\Fire\FireHazard.cs" />
     <Compile Include="EventHandlers\EventHandlerAttribute.cs" />
     <Compile Include="EventHandlers\General\GamemodeInitHandler.cs" />
     <Compile Include="EventHandlers\Item\CustomItemHandler.cs" />
@@ -175,6 +183,9 @@
     <Compile Include="Gamemodes\Gamemode.cs" />
     <Compile Include="Gamemodes\GamemodeAttribute.cs" />
     <Compile Include="Gamemodes\GamemodeManager.cs" />
+    <Compile Include="Patches\Grenade\FlashGrenadePatch.cs" />
+    <Compile Include="Patches\Grenade\HEGrenadePatch.cs" />
+    <Compile Include="Patches\Grenade\Scp2176Patch.cs" />
     <Compile Include="Patches\SearchItemCompletorPatch.cs" />
     <Compile Include="Patches\DropItemPatch.cs" />
     <Compile Include="Patches\Firearm\Reload\AutoFirearmReloadFinishPath.cs" />
@@ -195,7 +206,7 @@
     <Compile Include="Base\Subclass.cs" />
     <Compile Include="Base\CustomAbility.cs" />
     <Compile Include="Commands\GameConsole\CommandGas.cs" />
-    <Compile Include="Commands\GameConsole\CommandSuicide.cs" />
+    <Compile Include="Commands\GameConsole\Suicide.cs" />
     <Compile Include="Commands\RemoteAdmin\SetScaleManual.cs" />
     <Compile Include="Commands\RemoteAdmin\SetScaleMultiplier.cs" />
     <Compile Include="Effects\BetterBleeding.cs" />
