--- a/LurkBoisModded/LurkBoisModded.csproj
+++ b/LurkBoisModded/LurkBoisModded.csproj
@@ -152,12 +152,12 @@
     <Compile Include="Abilities\InspireAbility.cs" />
     <Compile Include="Abilities\ProximityChatAbility.cs" />
     <Compile Include="Abilities\RemoteExplosiveAbility.cs" />
-    <Compile Include="Base\CustomItem.cs" />
-    <Compile Include="Base\ICustomFirearmItem.cs" />
-    <Compile Include="Base\ICustomGrenadeItem.cs" />
-    <Compile Include="Base\StatReplacementBase.cs" />
+    <Compile Include="Base\CustomItems\CustomFirearm.cs" />
+    <Compile Include="Base\CustomItems\CustomItem.cs" />
+    <Compile Include="Base\CustomItems\ICustomFirearmItem.cs" />
+    <Compile Include="Base\CustomItems\ICustomGrenadeItem.cs" />
     <Compile Include="Base\FakeConnection.cs" />
-    <Compile Include="Base\IRequiredItemAbility.cs" />
+    <Compile Include="Base\Ability\IRequiredItemAbility.cs" />
     <Compile Include="Commands\RemoteAdmin\DeleteDummy.cs" />
     <Compile Include="Commands\RemoteAdmin\GiveCustomItem.cs" />
     <Compile Include="Commands\RemoteAdmin\ListCustomItems.cs" />
@@ -202,9 +202,9 @@
     <Compile Include="StatModules\NewHumeShieldStat.cs" />
     <Compile Include="Managers\DummyManager.cs" />
     <Compile Include="Managers\SubclassManager.cs" />
-    <Compile Include="Base\CustomCooldownAbility.cs" />
+    <Compile Include="Base\Ability\CustomCooldownAbility.cs" />
     <Compile Include="Base\Subclass.cs" />
-    <Compile Include="Base\CustomAbility.cs" />
+    <Compile Include="Base\Ability\CustomAbility.cs" />
     <Compile Include="Commands\GameConsole\CommandGas.cs" />
     <Compile Include="Commands\GameConsole\Suicide.cs" />
     <Compile Include="Commands\RemoteAdmin\SetScaleManual.cs" />
