--- a/LurkBoisModded/LurkBoisModded.csproj
+++ b/LurkBoisModded/LurkBoisModded.csproj
@@ -176,13 +176,21 @@
     <Compile Include="EnvriomentalHazards\HazardManager.cs" />
     <Compile Include="EnvriomentalHazards\Hazards\Fire\FireHazard.cs" />
     <Compile Include="EventHandlers\EventHandlerAttribute.cs" />
+    <Compile Include="EventHandlers\General\DeathNotificationHandler.cs" />
     <Compile Include="EventHandlers\General\GamemodeInitHandler.cs" />
     <Compile Include="EventHandlers\Item\CustomItemHandler.cs" />
     <Compile Include="EventHandlers\General\SubclassSpawnHandler.cs" />
+    <Compile Include="Extensions\DoorExtensions.cs" />
+    <Compile Include="Extensions\FirearmExtensions.cs" />
+    <Compile Include="Extensions\MirrorExtensions.cs" />
+    <Compile Include="Extensions\PlayerExtensions.cs" />
+    <Compile Include="Extensions\ReferenceHubExtensions.cs" />
     <Compile Include="Gamemodes\Deathmatch\DeathmatchGamemode.cs" />
     <Compile Include="Gamemodes\Gamemode.cs" />
     <Compile Include="Gamemodes\GamemodeAttribute.cs" />
     <Compile Include="Gamemodes\GamemodeManager.cs" />
+    <Compile Include="Patches\Firearm\DamageHandler.cs" />
+    <Compile Include="Patches\Firearm\MaxAmmoPatcher.cs" />
     <Compile Include="Patches\Grenade\FlashGrenadePatch.cs" />
     <Compile Include="Patches\Grenade\HEGrenadePatch.cs" />
     <Compile Include="Patches\Grenade\Scp2176Patch.cs" />
@@ -222,7 +230,7 @@
     <Compile Include="EventHandlers\General\GenericHandler.cs" />
     <Compile Include="EventHandlers\Scp914\Scp914SettingEventHandler.cs" />
     <Compile Include="EventHandlers\Scp939\Scp939ClawHandler.cs" />
-    <Compile Include="Extensions.cs" />
+    <Compile Include="Extensions\Extensions.cs" />
     <Compile Include="Config.cs" />
     <Compile Include="Managers\LootManager.cs" />
     <Compile Include="Patches\Scp049\Scp049ChaseSpeedPatch.cs" />
